k8s/singapore/base-dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-search-dev
  namespace: dev-ns
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: table-search-dev
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: table-search-dev
        version: v1
    spec:
      containers:
        - image: >-
            crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag-dev/table-search-dev:20251027184459
          imagePullPolicy: IfNotPresent
          env:
            - name: aliyun_logs_table-search-dev
              value: stdout
            - name: ENVIRONMENT
              value: dev
            - name: NACOS_ENDPOINT
              value: 'mse-9996a1110-nacos-ans.mse.aliyuncs.com:8848'
            - name: NACOS_NAMESPACE
              value: 8d222d2a-b3f7-4229-b44d-e8b305f9f512
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 5
          name: table-search-dev
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: registry-ali-hangzhou
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
