k8s/singapore/base-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev-ns
  name: table-search-dev-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: table-search-dev
    version: v1
  sessionAffinity: None
  type: ClusterIP
